@startuml fig_2_6_logical_er
title Рисунок 2.6 — Логическая модель данных (сущности)

skinparam shadowing false
skinparam classAttributeIconSize 0

class User <<сущность>> {
  идентификатор
  email
  телефон
  ФИО
  роль
  профиль врача
  симптомы/направления
}

class DoctorSchedule <<сущность>> {
  неделя
  день недели
  время начала
  время окончания
  активность
}

class Appointment <<сущность>> {
  дата слота
  время начала
  время окончания
  контактный телефон
  статус приёма
}

class DoctorDiploma <<сущность>> {
  название
  организация
  год
  файл PDF
}

class PatientDocument <<сущность>> {
  тип документа
  файл PDF
  дата загрузки
}

class PatientNote <<сущность>> {
  файл PDF
  дата создания
}

User "1" -- "0..*" DoctorSchedule : ведёт расписание
User "1" -- "0..*" Appointment : врач
User "1" -- "0..*" Appointment : пациент
User "1" -- "0..*" DoctorDiploma : дипломы
User "1" -- "0..*" PatientDocument : документы пациента
User "1" -- "0..*" PatientDocument : загрузил менеджер
User "1" -- "0..*" PatientNote : автор заметки
User "1" -- "0..*" PatientNote : пациент в заметке

@enduml
